[gd_scene load_steps=28 format=2]

[ext_resource path="res://SlowFruit/Boogie_Player.gd" type="Script" id=1]
[ext_resource path="res://SlowFruit/assets/Sound/animal-dog-footsteps.wav" type="AudioStream" id=2]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump5.png" type="Texture" id=3]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump6.png" type="Texture" id=4]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump8.png" type="Texture" id=5]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiWalk/corgi-walk1.png" type="Texture" id=6]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiWalk/corgi-walk2.png" type="Texture" id=7]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump11.png" type="Texture" id=8]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiWalk/corgi-walk3.png" type="Texture" id=9]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump2.png" type="Texture" id=10]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiWalk/corgi-walk4.png" type="Texture" id=11]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump10.png" type="Texture" id=12]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiWalk/corgi-walk5.png" type="Texture" id=13]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump7.png" type="Texture" id=14]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump9.png" type="Texture" id=15]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump1.png" type="Texture" id=16]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump4.png" type="Texture" id=17]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiJump/corgi-jump3.png" type="Texture" id=18]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiIdle/corgi-idle2.png" type="Texture" id=19]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiIdle/corgi-idle4.png" type="Texture" id=20]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiIdle/corgi-idle3.png" type="Texture" id=21]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiIdle/corgi-idle5.png" type="Texture" id=22]
[ext_resource path="res://SlowFruit/assets/BoogieDog/corgiIdle/corgi-idle1.png" type="Texture" id=23]
[ext_resource path="res://SlowFruit/assets/Sound/zapsplat_multimedia_game-sound_classic_retro_jump_010_65130.mp3" type="AudioStream" id=24]
[ext_resource path="res://SlowFruit/assets/Sound/Pickup_002.wav" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.8889, 17.1111 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 8 ) ],
"loop": true,
"name": "Jump",
"speed": 9.0
} ]

[node name="Boogie__Player" type="RigidBody2D"]
position = Vector2( -32, -24 )
scale = Vector2( 3, 3 )
z_index = 1
mode = 2
mass = 29.19
gravity_scale = 4.0
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17.9998, -22.6667 )
rotation = 1.5708
scale = Vector2( 3, 3 )
z_index = 2
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, -24 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "Idle"
frame = 4
playing = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = 2.0

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 3.0

[connection signal="finished" from="JumpSound" to="." method="_on_JumpSound_finished"]
